--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black_161615">#161615</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_F9F9F9_tr94">#F0F9F9F9</color>
+    <color name="grey_EBEBEB_tr50">#80EBEBEB</color>
+    <color name="grey_EBEBEB">#EBEBEB</color>
+    <color name="yellow_FFC107">#FFC107</color>
+    <color name="orange_bf3200">#bf3200</color>
 </resources>
