--- a/presentation/src/main/res/layout/activity_launcher.xml
+++ b/presentation/src/main/res/layout/activity_launcher.xml
@@ -7,14 +7,13 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/ic_starwars"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <ImageView
         android:layout_width="128dp"
@@ -26,5 +25,4 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="1"
         app:srcCompat="@drawable/ic_thinkit" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
